small bug - button click w/ mobile view shifts div to right

--- a/styles.scss
+++ b/styles.scss
@@ -131,8 +131,6 @@ hr {
     display: inline-block;
 }
 
-
-
 @media (max-width: 1000px) {
     .card {
         width: 75vw;
@@ -174,19 +172,39 @@ hr {
 
     .text {
         grid-column: 2;
-        margin-right: 2.5rem;
         border: 0;
         display: inline;
     }
 
     .toggle {
-        margin-top: 1.5rem;
+        margin-right: 2.5rem;
         margin-bottom: 1.5rem;
-        margin-right: 2.2rem;
     }
 
     hr {
         width: 100%;
+        margin-bottom: 1.5rem;
     }
+
+    #buttonA {
+        margin-left: 1px;
+    }
+
+    #buttonB {
+        margin-left: 3px;
+    }
+
+    #buttonC {
+        margin-left: 4.4rem;
+    }
+
+    #buttonD {
+        margin-left: 4.2rem;
+    }
+
+    #buttonE {
+        margin-left: 1.5rem;
+    }
+
 
 }
